# smith-webdemo

./: Cargo.toml  index.html  main.js
pkg/: .gitignore  smith_webdemo.js  smith_webdemo_bg.wasm
src/: lib.rs
